# TinyFrame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TF_Config.example.h  TF_Config.h  TF_Integration.c  TF_Integration.example.c  TinyFrame.c  TinyFrame.h
.github/prompts/: code-style.md
demo/: demo.c  demo.h  utils.c  utils.h
demo/simple/: Makefile  TF_Config.h  test.c
demo/simple_custom_cksum/: TF_Config.h  test.c
demo/simple_long_payload/: TF_Config.h  test.c
demo/simple_multipart/: Makefile  TF_Config.h  test.c
demo/socket_demo/: Makefile  master.c  slave.c
examples/: README.md  TF_Config.h  capsule.cpp  common.h  main.cpp  rf_device.h  simulator.cpp  tf_thread.cpp  tf_transport.cpp  transceiver.cpp
utilities/: payload_builder.c  payload_builder.h  payload_parser.c  payload_parser.h  type_coerce.h
